--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <body>
     <div id="particles-js" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;"></div>
     <audio id="backgroundAudio" loop autoplay muted>
-        <source src="background-music.mp3" type="audio/mpeg">
+        <source src="https://files.catbox.moe/yizd1x.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <button id="navButton"><i class="fas fa-bars"></i> </button>
