--- a/index.html
+++ b/index.html
@@ -266,16 +266,16 @@
         </div>
         <h2 class="mt-4 animate__animated animate__fadeIn" id="documentation">Dokumentasi</h2>
         <p class="animate__animated animate__fadeInUp">
-            Dokumentasi API lengkap tersedia di <a href="/api-docs">Swagger UI</a>.
+           <a href="/api-docs">docs</a>.
         </p>
-        <h2 class="mt-4 animate__animated animate__fadeIn" id="gallery">Galeri Vidio</h2>
+        <h2 class="mt-4 animate__animated animate__fadeIn" id="gallery">my tools, my game </h2>
         <div id="video-gallery">
             <video controls autoplay loop muted>
-                <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+                <source src="https://files.catbox.moe/k9pb3k.mp4"
                     type="video/mp4">
             </video>
             <video controls autoplay loop muted>
-                <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4"
+                <source src="https://files.catbox.moe/d5tv4a.mp4"
                     type="video/mp4">
             </video>
         </div>
